# drf_renderer_svgheatmap

./: .flake8  .gitignore  .pyup.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  hatch.toml  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: check.yml  test.yml  unittest.yml
drf_renderer_svgheatmap/: __init__.py  renderers.py
requirements/: Makefile  base.in  base.txt  development.in  development.txt  packaging.in  packaging.txt  requirements.in  requirements.txt  testing.txt
tests/: __init__.py  conftest.py  test_renderers.py  urls.py
