[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
atomic = true
include_trailing_comma = true
line_length = 80
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "--tb=short --strict -ra --verbose --cov=drf_renderer_svgheatmap --cov-report=term-missing"
testspath = ["tests"]

[tool.mypy]
strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
warn_no_return = false
show_traceback = true
allow_redefinition = true
incremental = true
