[metadata]
name = drf_renderer_svgheatmap
url = https://github.com/shkumagai/drf_renderer_svgheatmap
version = attr: drf_renderer_svgheatmap.__version__
lisence_file = LICENSE
description = SVG Heatmap renderer for Django REST Framework
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
author = Shoji Kumagai
author_email = take.this.2.your.grave@gmail.com
classifiers =
    Development State :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
install_requires =
    Django
    djangorestframework
    svgwrite
packages = find:
zip_safe = false

[options.packages.find]
exclude =
    tests*

[flake8]
max-line-length = 120
exclude =
    .git,
    .pytest_cache,
    .tox,
    __pycache__
ignore = E501,W503
